--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <body bgcolor=black>
 <center>
-<h2><font color=yellow>Hello GITHUB IS WORKING TRIGGER SOURCE CM (Source Code Management)</font></h2>
+<h2><font color=yellow>Hello GITHUB IS WORKING TRIGGER SOURCE CODE MANAGEMENT</font></h2>
 
 <font color=green>www.github.com</font>
 
